--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        />
     </head>
     <body>
+        <header id="header"></header>
         <div id="app"></div>
         <script type="module" src="/src/main.js"></script>
     </body>
